--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body>
+<body background="https://wallpaperplay.com/walls/full/f/b/f/41113.jpg">
+<div style="text-align: center;vertical-align: center;padding-top:150px;">
 
-    <h1>Witaj w grze ! Wciśnij (NOWA GRA), aby rozpocząć</h1>
+    <h1 style="color:#ffffff";>Witaj w grze! Zaczynamy?</h1>
 <form action="/play">
-    <input type="submit" value="NOWA GRA">
+    <button type="submit" name="play"><h3>Nowa Gra</h3></button>
 </form>
+</div>
 </body>
 </html>
