--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -6,3 +6,8 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.background-good{
+    background-image: url("https://st2.depositphotos.com/1575949/7058/v/950/depositphotos_70583737-stock-illustration-good-job-red-stamp-text.jpg");
+    background-position: center center;
+}
