--- a/src/main/resources/templates/good.html
+++ b/src/main/resources/templates/good.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <title>Gratulacje !</title>
 </head>
-<body background="https://st2.depositphotos.com/1575949/7058/v/950/depositphotos_70583737-stock-illustration-good-job-red-stamp-text.jpg">
-
+<style>
+    body {
+        background-image: url("https://wallpapercave.com/wp/lpPA9Ro.jpg");
+        background-repeat: no-repeat;
+        background-position: -10px -150px;
+    }
+</style>
+<body>
+<div style="text-align: center;vertical-align: center;padding-top:150px;">
+    <h1 style="color:#b2f441";>Dobra odpowiedź!</h1>
 <form action="/play">
     <button type="submit" name="play"><h3>Następne pytanie</h3></button>
-</div>
+    <h3 th:text="${r}"></h3>
 </form>
+</div>
 </body>
 </html>
