--- a/src/main/resources/templates/lost.html
+++ b/src/main/resources/templates/lost.html
@@ -7,7 +7,7 @@
 <body>
 <div style="text-align: center;vertical-align: center;padding-top:150px;">
 
-    <h1 style="color:#ffffff";>Witaj w grze! Zaczynamy?</h1>
+    <h1 style="color:#7bff1b" ;>PRZEJEBAŁEŚ</h1>
     <form action="/play">
         <button type="submit" name="play"><h3>Nowa Gra</h3></button>
     </form>
