--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <font size="3" style="color:#ccffcc";>Zasady: odpowiadasz na losowe pytania. Masz dostępne 3 koła ratunkowe 50/50. Za dobrą odpowiedź dostajesz punkt, za złą tracisz. Gdy stracisz wszystkie punkty, przegrywasz.</font>
 </head>
 <body background="https://wallpaperplay.com/walls/full/f/b/f/41113.jpg">
 <div style="text-align: center;vertical-align: center;padding-top:150px;">
