--- a/src/main/resources/templates/lost.html
+++ b/src/main/resources/templates/lost.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+    body {
+        background-image: url("https://i.pinimg.com/originals/ff/8d/09/ff8d0940719aee05e0cc22ea890e8b01.jpg");
+        background-repeat: no-repeat;
+        background-position: 0px -30px;
+    }
+</style>
 <body>
 <div style="text-align: center;vertical-align: center;padding-top:150px;">
 
-    <h1 style="color:#7bff1b" ;>PRZEJEBAŁEŚ</h1>
+    <h1 style="color:#7bff1b" ;>Straciłeś wszystkie punkty. Przegrałeś. Gramy dalej ?</h1>
     <form action="/play">
         <button type="submit" name="play"><h3>Nowa Gra</h3></button>
+    </form>
+
+    <form action="/">
+        <input type="submit" value="Menu główne">
     </form>
 </div>
 </body>
