--- a/src/main/resources/templates/wrong.html
+++ b/src/main/resources/templates/wrong.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <title>Zła odpowiedź !</title>
 </head>
-<body background= "https://www.colourbox.com/preview/11986794-wrong.jpg">
-
+<style>
+    body {
+        background-image: url("https://cdn.suwalls.com/wallpapers/vector/lego-breaking-bad-29291-2560x1440.jpg");
+        background-repeat: no-repeat;
+        background-position: -10px -150px;
+    }
+</style>
+<div style="text-align: center;vertical-align: center;padding-top:150px;">
+<body>
+<h1 style="color:#7bff1b" ;>Zła odpowiedź.</h1>
 <form action="/play">
     <button type="submit" name="play"><h3>Następne pytanie</h3></button>
 </form>
 </body>
+</div>
 </html>
