--- a/src/main/resources/templates/lifebuoy.html
+++ b/src/main/resources/templates/lifebuoy.html
@@ -1,40 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Zastanów się</title>
     <style>
         input[type=text] {
             width: 10%;
             padding: 12px 20px;
             margin: 8px 0;
             box-sizing: border-box;
-            border: 2px solid darkslateblue;
+            border: 2px solid #ff150e;
             border-radius: 4px;
         }
-        body {
-            background-image: url("https://wallpapercave.com/wp/wp3103196.jpg");
-            background-repeat: no-repeat;
-            background-position: 0px -30px;
-        }
     </style>
+    <meta charset="UTF-8">
+    <title>Koło ratunkowe</title>
 </head>
 <div style="text-align: center;vertical-align: center;padding-top:150px;">
+<body background="http://st.gde-fon.com/wallpapers_original/423701_more_bereg_spasatelnyj-krug_1680x1050_www.Gde-Fon.com.jpg">
 
-
-<body>
-<h1 style="color:#f41b16" ;>Jesteś pewny ?</h1>
+<h1 style="color:#ff1b0c" ;>Odpowiedz na pytanie :</h1>
 <button type="submit" name="button"><h3 th:text="${rightAnswer}"></h3></button>
-<button type="submit" name="button"><h3 th:text="${wrongAnswer1}"></h3></button>
 <button type="submit" name="button"><h3 th:text="${wrongAnswer2}"></h3></button>
-<button type="submit" name="button"><h3 th:text="${wrongAnswer3}"></h3></button>
 
-<form action="/sure">
-    <font size="4" style="color:#ff0e09" ;> Podaj odpowiedź:</font>
+<form action="/result">
+    <label style="color:#ff150e" ;>Podaj odpowiedź:</label>
     <input type="text" name="answer">
     <input type="submit" value="Odpowiedz">
 </form>
-</body>
 
+<font size="3" style="color:#ff1215" ;> Zużyte koła ratunkowe: <p th:text="${lifebuoy+1}"/> </font>
+</body>
 </div>
 </html>
